# cute-assistant

.cache/clangd/index/: ai_bridge.cpp.CDED1CC8A8F0E053.idx
cute_assistant/: README.md  pubspec.yaml
cute_assistant/android/app/: build.gradle  build.gradle.kts
cute_assistant/android/app/src/main/: AndroidManifest.xml
cute_assistant/android/app/src/main/cpp/: CMakeLists.txt  ai_bridge.cpp
cute_assistant/android/app/src/main/kotlin/com/example/cute_assistant/: MainActivity.kt
cute_assistant/android/src/main/cpp/: CMakeLists.txt  ai_bridge.cpp
cute_assistant/ios/Runner/: Info.plist
cute_assistant/ios/Runner.xcodeproj/: project.pbxproj
cute_assistant/lib/: main.dart
cute_assistant/lib/chat_ui/: chat_screen.dart  chat_state.dart
cute_assistant/lib/services/: on_device_ai_service.dart
cute_assistant/lib/vad/: vad_settings.dart
cute_assistant/linux/: CMakeLists.txt
cute_assistant/linux/runner/: my_application.cc
cute_assistant/macos/Runner.xcodeproj/: project.pbxproj
cute_assistant/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
cute_assistant/macos/Runner/Configs/: AppInfo.xcconfig
cute_assistant/test/: widget_test.dart
cute_assistant/web/: index.html  manifest.json
